// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BROWSERSLIST env var works in non test env  1`] = `
Array [
  Array [
    "@babel/preset-react",
    Object {
      "development": true,
      "useBuiltIns": true,
    },
  ],
  Array [
    "@babel/preset-env",
    Object {
      "exclude": Array [
        "transform-typeof-symbol",
      ],
      "modules": false,
      "useBuiltIns": "entry",
    },
  ],
]
`;

exports[`BROWSERSLIST works when importing babel polyfill  1`] = `
"import \\"core-js/modules/es7.array.flat-map.js\\";
import \\"core-js/modules/es6.array.iterator.js\\";
import \\"core-js/modules/es6.array.sort.js\\";
import \\"core-js/modules/es7.object.define-getter.js\\";
import \\"core-js/modules/es7.object.define-setter.js\\";
import \\"core-js/modules/es7.object.lookup-getter.js\\";
import \\"core-js/modules/es7.object.lookup-setter.js\\";
import \\"core-js/modules/es7.promise.finally.js\\";
import \\"core-js/modules/es7.symbol.async-iterator.js\\";
import \\"core-js/modules/es7.string.trim-left.js\\";
import \\"core-js/modules/es7.string.trim-right.js\\";
import \\"core-js/modules/web.timers.js\\";
import \\"core-js/modules/web.immediate.js\\";
import \\"core-js/modules/web.dom.iterable.js\\";"
`;

exports[`Right order of configuration in development 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "helpers": true,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    "@babel/plugin-syntax-dynamic-import",
  ],
  "presets": Array [
    Array [
      "@babel/preset-react",
      Object {
        "development": true,
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/preset-env",
      Object {
        "exclude": Array [
          "transform-typeof-symbol",
        ],
        "modules": false,
        "useBuiltIns": "entry",
      },
    ],
  ],
}
`;

exports[`Right order of configuration in production 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "helpers": true,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    "@babel/plugin-syntax-dynamic-import",
    Array [
      "babel-plugin-transform-react-remove-prop-types",
      Object {
        "removeImport": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/preset-react",
      Object {
        "development": false,
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/preset-env",
      Object {
        "exclude": Array [
          "transform-typeof-symbol",
        ],
        "modules": false,
        "useBuiltIns": "entry",
      },
    ],
  ],
}
`;

exports[`Right order of configuration in test 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "helpers": true,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "@babel/plugin-syntax-dynamic-import",
    "babel-plugin-transform-dynamic-import",
  ],
  "presets": Array [
    Array [
      "@babel/preset-react",
      Object {
        "development": true,
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/preset-env",
      Object {
        "targets": Object {
          "node": "current",
        },
      },
    ],
  ],
}
`;
